Fix wrong font path

--- a/app/assets/stylesheets/common.css.sass
+++ b/app/assets/stylesheets/common.css.sass
@@ -1,7 +1,7 @@
 @font-face
   font-family: 'Glyphicons Halflings'
-  src: url('/assets/glyphicons-halflings-regular.eot')
-  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg')
+  src: asset-url('bootstrap/glyphicons-halflings-regular.eot')
+  src: asset-url('bootstrap/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), asset-url('bootstrap/glyphicons-halflings-regular.woff') format('woff'), asset-url('bootstrap/glyphicons-halflings-regular.ttf') format('truetype'), asset-url('bootstrap/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg')
 
 .alert
   margin-bottom: 0
